# circular-buffer-cpp

./: .gitignore  CMakeLists.txt
include/tim/circular-buffer/: CircularBuffer.hpp  CircularBuffer.natvis
test/circular-buffer/: access.pass.cpp  contiguous.pass.cpp  iterators.pass.cpp  types.pass.cpp
test/circular-buffer/vector.capacity/: capacity.pass.cpp  empty.fail.cpp  empty.pass.cpp  max_size.pass.cpp  reserve.pass.cpp  resize_size.pass.cpp  resize_size_value.pass.cpp  shrink_to_fit.pass.cpp  size.pass.cpp  swap.pass.cpp
test/circular-buffer/vector.cons/: assign_copy.pass.cpp  assign_initializer_list.pass.cpp  assign_iter_iter.pass.cpp  assign_move.pass.cpp  assign_size_value.pass.cpp  construct_default.pass.cpp  construct_iter_iter.pass.cpp  construct_iter_iter_alloc.pass.cpp  construct_size.pass.cpp  construct_size_value.pass.cpp  construct_size_value_alloc.pass.cpp  copy.pass.cpp  copy_alloc.pass.cpp  deduct.fail.cpp  deduct.pass.cpp  default.recursive.pass.cpp  default_noexcept.pass.cpp  dtor.pass.cpp  dtor_noexcept.pass.cpp  initializer_list.pass.cpp  initializer_list_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign_noexcept.pass.cpp  move_noexcept.pass.cpp  op_equal_initializer_list.pass.cpp
test/circular-buffer/vector.erasure/: erase.pass.cpp  erase_if.pass.cpp
test/circular-buffer/vector.modifiers/: clear.pass.cpp  emplace.pass.cpp  emplace_back.pass.cpp  emplace_extra.pass.cpp  emplace_front.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.pass.cpp  insert_iter_initializer_list.pass.cpp  insert_iter_iter_iter.pass.cpp  insert_iter_rvalue.pass.cpp  insert_iter_size_value.pass.cpp  insert_iter_value.pass.cpp  pop_back.pass.cpp  pop_front.pass.cpp  push_back.pass.cpp  push_back_exception_safety.pass.cpp  push_back_rvalue.pass.cpp  push_front.pass.cpp  push_front_exception_safety.pass.cpp  push_front_rvalue.pass.cpp  resize_not_move_insertable.fail.cpp
test/circular-buffer/vector.special/: swap.pass.cpp  swap_noexcept.pass.cpp
test/support/: archetypes.h  asan_testing.h  container_debug_tests.h  container_test_types.h  debug_mode_helper.h  filesystem_test_helper.h  nano.save  nasty_containers.h  test_allocator.h  test_buffers.h  test_macros.h
